# gerrit

./: .bazel_path  .bazelignore  .bazelproject  .bazelrc  .bazelversion  .buckconfig  .buckjavaargs  .buckversion  .editorconfig  .eslintignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitreview  .mailmap  .mocharc.js  .pydevproject  .watchmanconfig  .zuul.yaml  0001-DelegateRepository-patch-for-old-jgit-version.patch  0001-Replace-native-http-git-_archive-with-Skylark-rules.patch  0002-Bump-Dagger-to-2.14.1-to-support-Java-9.patch  1 bug icon 16x16.ai  20f117d.diff  2q  3  3q  6e82b6f.txt  :q  AGENTS.md  Android  Android-10.0.torrent  BUCK  BUILD  COPYING  Codespaces  DEFS  DEPLOY_GAE  DEPLOY_MGR  (+113 more)
polygerrit-ui/: .editorconfig  .eslintrc.json  .gitignore  .jscsrc  .jshintignore  .jshintrc  AGENTS.md  BUCK  BUILD  Cookies  FE_Style_Guide.md  FRONTEND-STYLE-GUIDE.md  GEMINI.md  NOTES  Network Persistent State  Origin Bound Certs  Polymer2.md  Polymer3.md  README.md  bower-debug.json  bower.json  grep-patch-karma.js  gulpfile.js  html_to_js.js  json-empty-array  json-empty-object  karma.conf.js  karma_test.sh  machineid  map.json  package-lock.json  package.json  plugins.md  pnpm-lock.yaml  pnpm-workspace.yaml  polygerrit.MODULE.bazel  rapid_render.json  resultdb-reporter.mjs  rollup.config.js  run-server.sh  (+6 more)
polygerrit-ui/Backups/: workspaces.json
polygerrit-ui/Cache/: 024851657a48ee65_0  047afb5f73a81c81_0  cbc42e4c979f69f0_0
polygerrit-ui/Cache/index-dir/: the-real-index
polygerrit-ui/CachedData/b37e54c98e1a74ba89e03073e5a3761284e3ffb0/: AvailabilityData-a8b04c800ee33d1aefb952f21049e3b4.code  Base-4c5d4fe2dc4093c0d4b972baaa70c227.code  Channel-78ea03e096175cb51e830e69a7d5ba62.code  Config-3df194716243893ee19690857ce8e9ed.code  Console-a041d1d3c0f38f472806bf3f81efc71e.code  Constants-d25bf35b6174072b37f19541ae2da470.code  Context-79cc1e273d8be562bccefbc790e0bb0a.code  ContextTagKeys-de1b573e6d86120cdce6c2c1027f1f18.code  CorrelationContextManager-da8251227258593c29afd4a7f00c71ca.code  CorrelationIdManager-b3411a863ba8cd82f60b7d4dea180080.code  (+118 more)
polygerrit-ui/CachedExtensions/: builtin  user
polygerrit-ui/GPUCache/: data_1  index
polygerrit-ui/app/: .eslint-ts-resolver.js  .eslintignore  .eslintrc-bazel.js  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.js  BUCK  BUILD  bower.json  closure_no_deps.js  codemirror_editor.js  codemirror_element.js  compile_generated_templates.sh  embed_test.sh  eslint-bazel.config.js  eslint.config.js  gerrit-theme.js  gerrit.html  html_to_js.js  index.html  lint_test.sh  myplugin.html  package-lock.json  package.json  partial-redirects.json  pnpm-lock.yaml  pnpm-workspace.yaml  polygerrit_wct_tests.py  polylint_test.sh  polylint_test_wrapper.sh  polymer.json  redirects.json  rollup.config.js  rules.bzl  run_closure_test.sh  run_template_test.sh  run_test.sh  service-worker.js  template_test.sh  (+9 more)
polygerrit-ui/doc/: gr-plugin-styling.md
polygerrit-ui/edit-walkthrough/: edit-walkthrough.md
polygerrit-ui/externs/: plugin.js
tools/: BUCK  BUILD  DEFS  GoogleFormat.xml  PythonTestCaller.java  api  api.py  api_util.py  bazel.rc  bazlets.MODULE.bazel  bazlets.bzl  buck.defs  buck_daemon.launch  build.defs  check-format.sh  checkstyle.xml  coverage.sh  daemon_ui_dbg.launch  default.defs  defs.bzl  deploy_api.sh  deploy_plugin_api.sh  deps.bzl  deps.toml  dowload_gerrit_and_plugins.py  download_all.py  download_file.py  download_jar.py  download_jar.sh  eclipse_classpath.py  gerrit-and-plugin-version.yml.example  gerrit.importorder  git.defs  gitlog2asciidoc.py  gitlog2asciidoc.sh  gjf.sh  gwt-constants.defs  gwtui_any.launch  gwtui_dbg.launch  gwtui_mac.launch  (+32 more)
tools/asciidoctor/: BUCK
tools/build_rules/: prelude_bazel
tools/bzl/: BUILD  always_pass_test.sh  asciidoc.bzl  bazelisk_version.bzl  bower_support.bzl  build.bzl  check-format.sh  check_gjf.sh  checker.bzl  checker_command.txt  checker_parameters.txt  classpath.bzl  diff_allowlist.sh  genrule2.bzl  gjf.bzl  gwt.bzl  java.bzl  javadoc.bzl  jmh.bzl  js.bzl  junit.bzl  license-map.py  license.bzl  maven.bzl  maven_jar.bzl  pack_war.py  pkg_war.bzl  plugin.bzl  plugins.bzl  setup-intellij.sh  test_empty.sh  test_license.sh  unsign.bzl  utils.bzl  war_checks.bzl  zip_files.sh
tools/dev-hooks/: pre-commit
tools/eclipse/: BUCK  BUILD  buck_daemon_ui_dbg (local).launch  buck_daemon_ui_firefox.launch  buck_gwt_debug.launch  daemon_ui_chrome.launch  daemon_ui_ie9.launch  daemon_ui_safari.launch  eclipse_classpath.py  eclipse_project.py  gen_classpath.py  gen_project.py  gerrit_check_pgp.launch  gerrit_daemon.launch  gerrit_daemon_polygerrit.launch  gerrit_daemon_test_site.launch  gerrit_gwt_codeserver.launch  gerrit_gwt_debug.launch  gerrit_gwt_sdm_debug.launch  project.py  project_bzl.py
tools/format/: google-java-format
tools/gerrit/: api.py  util.py
tools/intellij/: Gerrit_Code_Style.xml  gerrit_daemon.xml
tools/jgit-ee8/: BUILD  classpath_duplicates_test.sh
tools/js/: BUCK  BUILD  bower2bazel.py  bower2buck.py  bowerutil.py  download_bower.py  eslint-chdir.js  eslint.bzl  npm_pack.py  run_npm_binary.py  template_checker.bzl  vulcanize.py
tools/maven/: BUCK  BUILD  api.py  api.sh  fake_pom.xml  fake_pom_deploy.xml  gerrit-acceptance-framework_pom.xml  gerrit-extension-api_pom.xml  gerrit-plugin-api_pom.xml  gerrit-plugin-gwtui_pom.xml  gerrit-war_pom.xml  mvn.py  package.bzl  package.defs  repository.defs
tools/maven-central/: jreleaser.yml
tools/migration/: html_to_link_commentlink.md
tools/node_tools/: BUILD  app_preprocessor.js  code_utils.js  cwd.js  deps.js  launchpad.patch  licenses_collector.js  links_updater.js  package.json  plugin.rollup.config.js  pnpm-lock.yaml  postinstall-patches.js  rollup-runner.js  tsc.sh
tools/polygerrit-legacy/: update_imports.py
tools/polygerrit-updater/: .gitignore  package-lock.json  package.json  readme.txt  tsconfig.json
tools/release_noter/: .flake8  .gitignore  Makefile  Pipfile  README.md  release_noter.md.template  release_noter.py
tools/util/: query_tester.sh
(+20750 files in other folders)
