module(name = "gerrit")

# Core Bazel deps.
bazel_dep(name = "bazel_features", version = "1.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")

# Language rules.
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_rules_rollup", version = "2.0.1")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "rules_android", version = "0.7.2")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Libraries / toolchains.
bazel_dep(name = "protobuf", version = "35.0")

# In-tree modules.
bazel_dep(name = "jgit")
local_path_override(
    module_name = "jgit",
    path = "./modules/jgit",
)

# Toolchain setup.
bazel_dep(name = "rbe_autoconfig")
git_override(
    module_name = "rbe_autoconfig",
    commit = "eb944ce4fc29a1608eae9adf0b0e0df2f9e05e33",
    remote = "https://github.com/davido/rbe_autoconfig.git",
)

register_toolchains("//tools:all")

# Plugin packaging support: bazlets pin and generated Gerrit API version repo.
include("//tools:bazlets.MODULE.bazel")

# Repository rules for in-tree sources.
include("//tools:repos.MODULE.bazel")

# External dependency wiring is split out.
include("//tools:java_deps.MODULE.bazel")

# PolyGerrit dependency wiring is split out.
include("//polygerrit-ui:polygerrit.MODULE.bazel")

# Wiring for external dependencies contributed by in-tree plugins.
include("//plugins:external_plugin_deps.MODULE.bazel")

