# Plugin packaging support kept outside the root module declaration:
# - bazlets dependency pin
# - generated Gerrit API version repo for artifact versioning and stamping
GERRIT_VERSION = "3.15.0-SNAPSHOT"

bazel_dep(name = "com_googlesource_gerrit_bazlets")
git_override(
    module_name = "com_googlesource_gerrit_bazlets",
    commit = "2366eccc72aac1a966ef3446c98a80230a7b5d89",
    remote = "https://gerrit.googlesource.com/bazlets",
)

gerrit_api_version = use_repo_rule(
    "@com_googlesource_gerrit_bazlets//:gerrit_api_version.bzl",
    "gerrit_api_version",
)

gerrit_api_version(
    name = "gerrit_api_version",
    version = GERRIT_VERSION,
    visibility = ["//visibility:public"],
)
