# Repository rules for in-tree or vendored sources.
#
# This module fragment is included from MODULE.bazel to keep repository
# declarations separate from the module dependency graph.

local_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:local.bzl",
    "local_repository",
)

# Java-Prettify external repository consumed from git submodule.
local_repository(
    name = "java-prettify",
    path = "modules/java-prettify",
)
